--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "key.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "tweet": "node liri.js my-tweets"
   },
   "repository": {
     "type": "git",
@@ -17,6 +18,7 @@
   },
   "homepage": "https://github.com/fathao/liri-node-app#readme",
   "dependencies": {
+    "node-spotify-api": "^1.0.7",
     "twitter": "^1.7.1"
   }
 }
