--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/fathao/liri-node-app#readme",
   "dependencies": {
     "node-spotify-api": "^1.0.7",
+    "request": "^2.83.0",
     "twitter": "^1.7.1"
   }
 }
